kubernetes/connector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-connector
  namespace: openfaas
spec:
  selector:
    matchLabels:
      app: rabbitmq-connector
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq-connector
    spec:
      volumes:
        - name: basic-auth
          secret:
            secretName: basic-auth
#            optional: false
        - name: topology
          configMap:
            name: rabbitmq-connector-topology-configmap
#            optional: false
      containers:
        - name: connector
          image: templum/rabbitmq-connector:develop
#          command: ["sleep", "infinity"]
          imagePullPolicy: Always
          resources: {} # Adjust them to suite your needs
          volumeMounts:
            - name: "basic-auth"
              readOnly: true
              mountPath: "/etc/openfaas"
            - name: topology
              readOnly: true
              mountPath: "/etc/topology.yaml"
              subPath: "topology.yaml"
