kubernetes/consumer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: docker.io/library/go-faas-consumer
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
